adicionando todos os campos das extensoes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
     "cSpell.words": [
-        "publicação"
+        "applicationarea",
+        "casestudy",
+        "datepublication",
+        "exampleofuse",
+        "extensionbase",
+        "extensionderivative",
+        "notpresentedevaluation",
+        "publicação",
+        "sourcelocation",
+        "validationform"
     ]
 }
