criando as extensoes, acessando a pagina de extensao e criando construtores

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "applicationarea",
         "casestudy",
         "datepublication",
+        "encontrada",
         "exampleofuse",
         "extensionbase",
         "extensionderivative",
