mostrando todas as informacoes das extensoes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,18 @@
         "applicationarea",
         "casestudy",
         "datepublication",
+        "definitionofconcepts",
         "encontrada",
         "exampleofuse",
         "extensionbase",
         "extensionderivative",
+        "metamodelcompleteness",
         "notpresentedevaluation",
         "publicação",
         "sourcelocation",
+        "syntaxlevel",
+        "titulo",
+        "toolsuport",
         "validationform"
     ]
 }
