configuracoes de deploy e logout adicionadas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "casestudy",
         "datepublication",
         "definitionofconcepts",
+        "emaill",
         "encontrada",
         "exampleofuse",
         "extensionbase",
