ajuste de texto inicial, ajustes no css, aprovar e deletar extensoes reportadas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "applicationarea",
+        "Carvalho",
         "casestudy",
+        "Ceará",
         "datepublication",
         "definitionofconcepts",
         "emaill",
@@ -9,13 +11,17 @@
         "exampleofuse",
         "extensionbase",
         "extensionderivative",
+        "Gonçalves",
         "metamodelcompleteness",
         "notpresentedevaluation",
         "publicação",
+        "reportedby",
+        "Rodrigues",
         "sourcelocation",
         "syntaxlevel",
         "titulo",
         "toolsuport",
+        "Universidade",
         "validationform"
     ],
     "FSharp.suggestGitignore": false
