fix css on page extensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "exampleofuse",
         "extensionbase",
         "extensionderivative",
+        "Extensios",
         "Gonçalves",
         "metamodelcompleteness",
         "notpresentedevaluation",
