implemtacao de alguns filtros de busca na pagina de listagem de extensoes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "applicationarea",
+        "busca",
         "Carvalho",
         "casestudy",
         "Ceará",
@@ -12,12 +13,16 @@
         "extensionbase",
         "extensionderivative",
         "Extensios",
+        "EXTENSOES",
+        "FILTRANDO",
         "Gonçalves",
+        "Iprops",
         "metamodelcompleteness",
         "notpresentedevaluation",
         "publicação",
         "reportedby",
         "Rodrigues",
+        "selecionados",
         "sourcelocation",
         "syntaxlevel",
         "titulo",
