filtros aplicados, construtores listados, acesso a pagina de construtores, deletar construtores, correcao nos titulos dos inputs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Carvalho",
         "casestudy",
         "Ceará",
+        "construtores",
         "datepublication",
         "definitionofconcepts",
         "emaill",
