buf fix in input seacrh for applicationarea

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Carvalho",
         "casestudy",
         "Ceará",
+        "conect",
         "construtores",
         "datepublication",
         "definitionofconcepts",
